cicd/nexus/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nexus
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: sonatype/nexus3
        name: nexus3
        ports:
        - containerPort: 8081
        - containerPort: 8082
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus
      volumes:
      - name: nexus
        persistentVolumeClaim:
          claimName: nexus
