cicd/nexus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus
spec:
  ports:
  - name: port-1
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: port-2
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: nexus
