cicd/nexus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: nexus
  name: nexus
spec:
  port:
    targetPort: 8081
  to:
    kind: ""
    name: nexus
    weight: null
status: {}
